Modfied keyword exclusion list

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h2>💬 แชทบอทแนะนำโบรชัวร์</h2>
+  <h2>💬 แชทบอทแนะนำโบรชัวร์ อยู่ระหว่างพัฒนา พิมพ์ค้นหาได้เฉพาะคีย์เวิร์ดที่สนใจเท่านั้นนะจ๊ะ</h2>
   <div id="chat-container"></div>
   <input type="text" id="user-input" placeholder="พิมพ์ข้อความที่นี่..." />
   <button id="send-btn">ส่ง</button>
