Added youtube links, styling, and UX

--- a/index.html
+++ b/index.html
@@ -2,26 +2,16 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>แชทบอทแนะนำโบรชัวร์</title>
-  <style>
-    #chat-container {
-      height: 400px;
-      width: 100%;
-      border: 1px solid #ccc;
-      overflow-y: auto;
-      padding: 10px;
-      margin-bottom: 10px;
-      font-family: sans-serif;
-    }
-    .user { color: blue; margin: 5px 0; }
-    .bot { color: green; margin: 5px 0; }
-  </style>
+  <title>หน้าแรก</title>
+  <link rel="stylesheet" href="chatbot.css">
 </head>
 <body>
-  <h2>💬 แชทบอทแนะนำโบรชัวร์ อยู่ระหว่างพัฒนา พิมพ์ค้นหาได้เฉพาะคีย์เวิร์ดที่สนใจเท่านั้นนะจ๊ะ</h2>
-  <div id="chat-container"></div>
-  <input type="text" id="user-input" placeholder="พิมพ์ข้อความที่นี่..." />
-  <button id="send-btn">ส่ง</button>
+  <h1>หน้าแรก</h1>
+  <ul>
+    <li><a href="page1.html">ไปหน้าที่ 1</a></li>
+    <li><a href="page2.html">ไปหน้าที่ 2</a></li>
+    <li><a href="page3.html">ไปหน้าที่ 3</a></li>
+  </ul>
 
   <script src="chatbot.js"></script>
 </body>
