--- a/index.html
+++ b/index.html
@@ -2,16 +2,93 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>หน้าแรก</title>
+  <title>TCC-Chatbot</title>
   <link rel="stylesheet" href="chatbot.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Prompt', sans-serif;
+      background-color: #f2f9fc;
+      color: #333;
+    }
+
+    header {
+      background-color: #00a7d6;
+      padding: 1rem;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 1.8rem;
+    }
+
+    nav a {
+      color: white;
+      margin-left: 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      text-align: center;
+      padding: 3rem 1rem;
+    }
+
+    main img {
+      max-width: 320px;
+      margin-bottom: 1rem;
+    }
+
+    a.button {
+      background-color: #00a7d6;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 1rem;
+    }
+
+    a.button:hover {
+      background-color: #008fb8;
+    }
+
+    footer {
+      margin-top: 4rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>หน้าแรก</h1>
-  <ul>
-    <li><a href="page1.html">ไปหน้าที่ 1</a></li>
-    <li><a href="page2.html">ไปหน้าที่ 2</a></li>
-    <li><a href="page3.html">ไปหน้าที่ 3</a></li>
-  </ul>
+  <header>
+    <h1>สภาองค์กรของผู้บริโภค</h1>
+    <nav>
+      <a href="https://www.tcc.or.th">เว็บไซต์หลัก TCC</a>
+    </nav>
+  </header>
+
+  <main>
+    <img src="mascot-front.png" alt="TCC Mascot Image">
+    <h2>ทุกปัญหามีทางออก โทรบอกเรา 1502</h2>
+    <p>ติดต่อสภาผู้บริโภคเพื่อร้องเรียนหรือขอคำแนะนำผ่านสายด่วน 1502 หรือช่องทางอื่น ๆ ได้ตลอดเวลาทำการ</p>
+    <a class="button" href="https://www.tcc.or.th">กลับไปที่เว็บไซต์หลัก TCC</a>
+  </main>
+
+  <footer>
+    © 2025 สภาองค์กรของผู้บริโภค | เว็บไซต์นี้จัดทำขึ้นเพื่อการทดลองระบบแชทบอท
+  </footer>
 
   <script src="chatbot.js"></script>
 </body>
