UI developed for the render website

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <header>
-    <h1>สภาองค์กรของผู้บริโภค</h1>
+    <h1>แชทบอทของสภาองค์กรของผู้บริโภค</h1>
     <nav>
       <a href="https://www.tcc.or.th">เว็บไซต์หลัก TCC</a>
     </nav>
